--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cliopt",
+  "name": "clipop",
   "version": "1.0.0",
-  "description": "cliopt ===",
-  "main": "dist/cliopt.js",
+  "description": "clipop ===",
+  "main": "dist/clipop.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest dist/test",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/francoisrv/cliopt.git"
+    "url": "git+https://github.com/francoisrv/clipopt.git"
   },
   "keywords": [
     "cli",
@@ -20,9 +20,9 @@
   "author": "that guy",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/francoisrv/cliopt/issues"
+    "url": "https://github.com/francoisrv/clipopt/issues"
   },
-  "homepage": "https://github.com/francoisrv/cliopt#readme",
+  "homepage": "https://github.com/francoisrv/clipopt#readme",
   "dependencies": {
     "@types/lodash.includes": "^4.3.6",
     "@types/lodash.set": "^4.3.6",
