--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "jest": "^25.4.0",
+    "semver": "^7.3.2",
     "typescript": "^3.8.3"
   }
 }
