--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -15,6 +15,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+
+      - name: Install dependencies
+        run: npm i
       
       - name: Update version
         run: node scripts/semver
