--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -23,7 +23,7 @@ jobs:
         run: node scripts/semver
 
       - name: Save version
-      - uses: EndBug/add-and-commit@v4 # You can change this to use a specific version
+        uses: EndBug/add-and-commit@v4 # You can change this to use a specific version
         with:
           add: 'package.json'
           message: 'Update version'
