--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/francoisrv/cliopt#readme",
   "dependencies": {
+    "@actions/core": "^1.2.4",
     "@types/lodash.includes": "^4.3.6",
     "@types/lodash.set": "^4.3.6",
     "lodash.includes": "^4.3.0",
