--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,3 +45,8 @@ jobs:
             - Second Change
           draft: false
           prerelease: false
+
+      - name: Publish to npm
+        run: npm pub
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
